looked at pull.js

--- a/Lstations.html
+++ b/Lstations.html
@@ -30,6 +30,6 @@
     </ul>
    </div> 
   </section>  
-  <script src="assets/js/pull.js"></script>
+  <script src="assets/js/pull_lstations.js"></script>
   </body>
 </html>
