--- a/Lstations.html
+++ b/Lstations.html
@@ -3,8 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>CTA L STATIONS</title>
- 
-    <link rel="stylesheet" href="assets/styles/jquery.mobile.theme-1.4.3.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/styles/jquery.mobile-1.4.3.css">
    
     <script src="assets/js/jquery-1.11.1.min.js" ></script>
    
