--- a/busstops.html
+++ b/busstops.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>CTA BUS STATIONS</title>
-    <link rel="stylesheet" href="assets/styles/jquery.mobile.theme-1.4.3.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/styles/jquery.mobile-1.4.3.css">
    
     <script src="assets/js/jquery-1.11.1.min.js" ></script>
    
@@ -10,14 +11,16 @@
     <script src="assets/js/jquery.mobile-1.4.3.js"></script>
   </head>
   <body>
+    <section data-role="page">
   	<header data-role="header">Bus Stops</header>
   	<div data-role="content">
-  		<section id="bstops" data-role="page">
   			<ul data-role="listview" data-inset="true" data-filter="true" id="bstoplist">
 
   			</ul>
-  	</div>
+  	   </div>
   		</section>
   		<script src="assets/js/pull_busstops.js"></script>
   </body>
 </html>
+
+
